compatible with rustdesk 1.2.0 and later versions
